Tue May 29 12:23:32 2001                        Michael Jennings (mej)

Minor fixes.
----------------------------------------------------------------------
Fri Jun  8 14:05:57 2001                      Walt Drummond (drummond)
Added sample Makefile.avalon and update buildtool manpage to reference
it.

----------------------------------------------------------------------
Fri Jun  8 16:38:58 2001                        Michael Jennings (mej)

Fixed in-place building of packages to leave RPM's in the current
directory.

Fixed avtag and avrtag so you don't need the -t/-T options.

Moved the SRCS info to the avalon.srcs file for in-place builds.

Fixed revtool's login routine to only login if required.
----------------------------------------------------------------------
Fri Jun  8 17:13:14 2001                        Michael Jennings (mej)

Added support for the -D option in srctool so that avimport (et al.)
can take alternative CVSROOT's.  (Fixes bug #1047.)

Added a -f/--force option to imgtool.  The default behavior is now to
exit if a failure occurs.  (Fixes bug #1249.)
----------------------------------------------------------------------
Thu Jun 14 12:43:56 2001                        Michael Jennings (mej)

That "feature" has pissed me off for the last time.  From now on, SRPM
packages we plan to build will be completely exploded no matter what.
Doing it the other way wasted far too much time and was designed for
a purpose for which no one ever uses it.
----------------------------------------------------------------------
Thu Jun 14 20:23:56 2001                        Michael Jennings (mej)

For the sake of paranoia, Avalon tools will now enforce a umask of
0022.
----------------------------------------------------------------------
Mon Jun 18 10:18:21 2001                        Michael Jennings (mej)

Better handling of commits inside modules.
----------------------------------------------------------------------