@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: pkgtool,v 1.39 2001/06/15 03:27:37 mej Exp $
+# $Id: pkgtool,v 1.40 2001/07/18 22:47:49 mej Exp $
 #
 
 # Include the Perl Modules we need
@@ -31,7 +31,7 @@ require POSIX;
 require Getopt::Long;
 use Cwd;
 use Avalon::Util;
-use Avalon::Pkgtool;
+use Avalon::Pkg;
 
 # Print usage information
 sub
@@ -971,7 +971,7 @@ main
     select STDOUT; $| = 1;
     if ($opt_v) {
         # Do not edit this variable.  It is updated automatically by CVS when you commit
-        my $rcs_info = 'CVS Revision $Revision: 1.39 $ created on $Date: 2001/06/15 03:27:37 $ by $Author: mej $ ';
+        my $rcs_info = 'CVS Revision $Revision: 1.40 $ created on $Date: 2001/07/18 22:47:49 $ by $Author: mej $ ';
 
         $rcs_info =~ s/\$\s*Revision: (\S+) \$/$1/;
         $rcs_info =~ s/\$\s*Date: (\S+) (\S+) \$/$1 at $2/;
