@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: revtool,v 1.72 2001/06/18 17:17:31 mej Exp $
+# $Id: revtool,v 1.73 2001/07/18 22:47:49 mej Exp $
 #
 
 # Include the Perl Modules we need
@@ -347,36 +347,38 @@ commit_to_master
     close(LOGFILE);
     chomp($module = &cat_file("CVS/Repository"));
     dprint "Current directory is \"$cwd\", module name is \"$module\"\n";
-    if (($module ne $cwd) && (! -f "ChangeLog") && (! $opt_x)) {
-        # We're not in the module directory and there's no ChangeLog here.  Offer to cd to it.
-        wprint "This commit is not being done from the top of the module, and I see no ChangeLog here.\n";
-        wprint "I will proceed without writing a ChangeLog entry.  If you are in the wrong directory,\n";
-        wprint "hit Ctrl-C now or exit your editor without writing an entry.  If you want me to write\n";
-        wprint "a ChangeLog entry for you here, abort the commit as above and touch ChangeLog.\n";
-        sleep(1);
-    } else {
-        if (! -f "ChangeLog") {
-            if (open(CL, ">ChangeLog")) {
-                print "WARNING:  You have no ChangeLog here.  I have created one for you.\n";
-                &add_new_files("ChangeLog");
-            } else {
-                print "WARNING:  Unable to create ChangeLog:  $!\n";
-                $opt_x = 1;
-            }
+    if (! $opt_x) {
+        if (($module ne $cwd) && (! -f "ChangeLog")) {
+            # We're not in the module directory and there's no ChangeLog here.  Offer to cd to it.
+            wprint "This commit is not being done from the top of the module, and I see no ChangeLog here.\n";
+            wprint "I will proceed without writing a ChangeLog entry.  If you are in the wrong directory,\n";
+            wprint "hit Ctrl-C now or exit your editor without writing an entry.  If you want me to write\n";
+            wprint "a ChangeLog entry for you here, abort the commit as above and touch ChangeLog.\n";
+            sleep(1);
         } else {
-            if (! -w "ChangeLog") {
-                chmod(0644, "ChangeLog");
-            }
-            if (open(CL, ">>ChangeLog")) {
-                if ($file_list !~ /^\s*$/ && $file_list !~ /ChangeLog/) {
-                    $file_list = "$file_list ChangeLog";
+            if (! -f "ChangeLog") {
+                if (open(CL, ">ChangeLog")) {
+                    print "WARNING:  You have no ChangeLog here.  I have created one for you.\n";
+                    &add_new_files("ChangeLog");
+                } else {
+                    print "WARNING:  Unable to create ChangeLog:  $!\n";
+                    $opt_x = 1;
                 }
             } else {
-                print "WARNING:  Unable to write to ChangeLog:  $!\n";
-                $opt_x = 1;
+                if (! -w "ChangeLog") {
+                    chmod(0644, "ChangeLog");
+                }
+                if (open(CL, ">>ChangeLog")) {
+                    if ($file_list !~ /^\s*$/ && $file_list !~ /ChangeLog/) {
+                        $file_list = "$file_list ChangeLog";
+                    }
+                } else {
+                    print "WARNING:  Unable to write to ChangeLog:  $!\n";
+                    $opt_x = 1;
+                }
             }
         }
-    }        
+    }
     print "Please edit your commit message now...\n";
     system($ENV{"EDITOR"} ? $ENV{"EDITOR"} : "vi", $logfile);
 
@@ -909,7 +911,7 @@ BEGIN {
     }
     if ($opt_v) {
         # Do not edit this variable.  It is updated automatically by CVS when you commit
-        my $rcs_info = 'CVS Revision $Revision: 1.72 $ created on $Date: 2001/06/18 17:17:31 $ by $Author: mej $ ';
+        my $rcs_info = 'CVS Revision $Revision: 1.73 $ created on $Date: 2001/07/18 22:47:49 $ by $Author: mej $ ';
 
         $rcs_info =~ s/\$\s*Revision: (\S+) \$/$1/;
         $rcs_info =~ s/\$\s*Date: (\S+) (\S+) \$/$1 at $2/;
